--- a/abidjan/index.html
+++ b/abidjan/index.html
@@ -1,28 +1,29 @@
 <html>
+<link rel="stylesheet" href="../_css/style.css" type="text/css">
 <body>
-  <img src="yamoussoucro.png" style="width:100%;"/>
+  <img src="yamoussoucro.jpg" class="w100"/>
 
-  <p style="float:left;text-align:left;">
-    .
-    vous êtes resté longtemps ?
-    alors
-    vous connaissez bien
-    .
+  <p class="tleft">
+    .<br>
+    vous êtes resté longtemps ?<br>
+    alors<br>
+    vous connaissez bien<br>
+    .<br>
     en Côte d'Ivoire ?
   </p>
 
-  <p style="float:right;text-align:right;">
-    bah oui ! un peu plus de 40 ans
-    mais bon, c'était occasionnel - aussi à Abidjan autour
-    et mon coeur est breton
-    sur la route de Pau, quoi, vers Bodonne
-    mais en 86, je suis reparti en Côte d'Ivoire
+  <p class="tright">
+    bah oui ! un peu plus de 40 ans<br>
+    mais bon, c'était occasionnel - aussi à Abidjan autour<br>
+    et mon coeur est breton<br>
+    sur la route de Pau, quoi, vers Bodonne<br>
+    mais en 86, je suis reparti en Côte d'Ivoire<br>
     je n'avais pas le choix
   </p>
 
-  <img src="yam1.jpg" style="width:100%;"/>
+  <img src="yam1.jpg" class="w100"/>
 
-  <p style="float:right;text-align:right;">
+  <p class="tright">
     en retournant, en 73, là où j'avais fait 9 ans<br>
     j'ai retrouvé pas mal de gens<br>
     et puis en 75, changement d'évêque<br>
@@ -33,7 +34,7 @@
     j'ai encore bougé<br>
     mais je me plaisais là-bas, c'était quelque chose
   </p>
-  <p style="float:left;text-align:left;">
+  <p class="tleft">
     il arrive pas vite<br>
     le facteur<br>
     il passe en général à partir de 10h et demi.<br>
@@ -45,31 +46,33 @@
     on attend les lettres mais elles n'arrivent pas
   </p>
 
-  <img src="yam2.jpg" style="width:100%;"/>
+  <img src="yam2.jpg" class="w100"/>
 
-  <p style="float:right;text-align:right;">
-    le courrier n'est pas arrivé<br>
-    .<br>
-    ils sont en grève aujourd'hui<br>
-    .<br>
-    .<br>
-    on a entendu un bruit<br>
-    .<br>
-    .<br>
-    c'est la bonne couleur<br>
-    .
-  </p>
-  <p style="float:left;text-align:left;">
-    2 fils uniques, avec 13 ans de différence<br>
-    à ma naissance, je l'ai envoyé au boulot<br>
-    comme il voulait bien travailler, il est parti aux chemins de fer<br>
-    il s'est engagé, mais il n'y avait pas encore la guerre, en 38<br>
-    puis, en 40, il était prisonnier<br>
-    on a échangé des lettres par le système<br>
-    pas de problème, mais faites vite votre demande<br>
-    au mois de juillet, après un mois de congé<br>
-    .<br>
-    il est revenu me voir - je crois
-  </p>
+  <div class="band">
+    <p class="tright">
+      le courrier n'est pas arrivé<br>
+      .<br>
+      ils sont en grève aujourd'hui<br>
+      .<br>
+      .<br>
+      on a entendu un bruit<br>
+      .<br>
+      .<br>
+      c'est la bonne couleur<br>
+      .
+    </p>
+    <p class="tleft">
+      2 fils uniques, avec 13 ans de différence<br>
+      à ma naissance, je l'ai envoyé au boulot<br>
+      comme il voulait bien travailler, il est parti aux chemins de fer<br>
+      il s'est engagé, mais il n'y avait pas encore la guerre, en 38<br>
+      puis, en 40, il était prisonnier<br>
+      on a échangé des lettres par le système<br>
+      pas de problème, mais faites vite votre demande<br>
+      au mois de juillet, après un mois de congé<br>
+      .<br>
+      il est revenu me voir - je crois
+    </p>
+  </div>
 </body>
 </html>
