--- a/hasard/index.html
+++ b/hasard/index.html
@@ -1,24 +1,40 @@
 <html>
+<link rel="stylesheet" href="../_css/style.css" type="text/css">
 <body>
-  <img src="oncleamerique_lovelit.gif" width="50%" /><img src="oncleamerique_gueule.gif" width="50%" />
-  <p style="float:left;">on ne peux pas recopier le hasard parfaitement</p>
-  <p style="float:right;text-align:right;">la réalité y fait souvent des plis</p>
-  <p style="clear:both;"></p>
-  <img src="oncleamerique_ouimais.gif" width="50%" /><img src="oncleamerique_mer.gif" width="50%" />
-  <p style="float:left;">c'est super-dur à aplatir</p>
-  <p style="float:right;text-align:right;">sans y mettre de la modération</p>
-  <p style="clear:both;"></p>
-  <img src="oncleamerique_touche.gif" width="50%" /><img src="oncleamerique_respire2.gif" width="50%" />
-  <p style="float:left;">encaisser à qui-mieux-mieux</p>
-  <p style="float:right;text-align:right;">avant - tant qu'il en reste</p>
-  <p style="clear:both;"></p>
-  <img src="oncleamerique_portesouris.gif" width="33.3%" /><img src="oncleamerique_loveporte.gif" width="33.3%" /><img src="oncleamerique_portenuit.gif" width="33.3%" />
-  <p style="float:left;">argumenter - attention - mentir</p>
-  <p style="float:right;text-align:right;">sans se justifier, en douceur</p>
-  <p style="clear:both;"></p>
-  <img src="oncleamerique_barquepistolet.gif" width="50%" /><img src="oncleamerique_respire1.gif" width="50%" />
-  <p style="float:left;">en aspirant bien, on arrive à tout enlever</p>
-  <p style="float:right;text-align:right;">après, même les petits morceaux</p>
-  <p style="clear:both;"></p>
+  
+  <img src="oncleamerique_lovelit.gif" class="w50"/><img src="oncleamerique_gueule.gif" class="w50"/>
+
+  <div class="band">
+    <p class="tleft">on ne peux pas recopier le hasard parfaitement</p>
+    <p class="tright">la réalité y fait souvent des plis</p>
+  </div>
+  
+  <img src="oncleamerique_ouimais.gif" class="w50"/><img src="oncleamerique_mer.gif" class="w50"/>
+
+  <div class="band">
+    <p class="tleft">c'est super-dur à aplatir</p>
+    <p class="tright">sans y mettre de la modération</p>
+  </div>
+  
+  <img src="oncleamerique_touche.gif" class="w50"/><img src="oncleamerique_respire2.gif" class="w50"/>
+
+  <div class="band">
+    <p class="tleft">encaisser à qui-mieux-mieux</p>
+    <p class="tright">avant - tant qu'il en reste</p>
+  </div>
+  
+  <img src="oncleamerique_portesouris.gif" class="w33"/><img src="oncleamerique_loveporte.gif" class="w33"/><img src="oncleamerique_portenuit.gif" class="w33"/>
+
+  <div class="band">
+    <p class="tleft">argumenter - attention - mentir</p>
+    <p class="tright">sans se justifier, en douceur</p>
+  </div>
+  
+  <img src="oncleamerique_barquepistolet.gif" class="w50"/><img src="oncleamerique_respire1.gif" class="w50"/>
+
+  <div class="band">
+    <p class="tleft">en aspirant bien, on arrive à tout enlever</p>
+    <p class="tright">après, même les petits morceaux</p>
+  </div>
 </body>
 </html>
