--- a/lettre/index.html
+++ b/lettre/index.html
@@ -1,22 +1,41 @@
 <html>
+<link rel="stylesheet" href="../_css/style.css" type="text/css">
 <body>
-on donne 10 ans de moins, mais je recherche par manque de tendresse homme au tempérament de feu qui saura me faire fondre selon ses envies<br>
-mince - petite ou grande, coquin, mariée, charnelle et disponible aux yeux verts<br>
-franche et authentique sans complication - il saura combler tous vos caprices, qu'il soient sensibles<br>
-pour un instant d'affinité partagée
+  <p class="tleft">
+    on donne 10 ans de moins, mais je recherche par manque de tendresse<br>
+    homme au tempérament de feu qui saura me faire fondre selon ses envies<br>
+    mince - petite ou grande, coquin, mariée, charnelle et disponible aux yeux verts<br>
+    franche et authentique sans complication<br>
+    il saura combler tous vos caprices, qu'il soient sensibles<br>
+    pour un instant d'affinité partagée
+  </p>
 
-<img src="lettre_haut.jpg" style="width:100%;"/>
-- donne des tickets restaurants, en disant "tiens"<br>
-- dispo 7/24 + travaux de rénovation<br>
-et ce pour tous les problèmes, surtout désespérés - dégâts occasionnels selon niveau social
+  <img src="lettre_haut.jpg" style="width:100%;"/>
 
-<img src="lettre_mid.jpg" style="width:100%;"/>
-sache que j'apprécierais vraiment n'importe quel montant que tu pourra m'envoyer pour aider<br>
-sache aussi que si tu peux faire quelque chose pour moi je te serais toujours infiniment reconnaissant
-<img src="lettre_bas.jpg" style="width:100%;"/>
-<p style="text-align: right;">i express the deep apology to you
-the telephone does not have the signal</p>
-<p style="text-align: right;">deeply yours</p>
-<p style="text-align: right;">Gridge J.</p>
+  <p class="tright">
+    donne des tickets restaurants, en disant "tiens" -<br>
+    dispo 7/24 + travaux de rénovation -<br>
+    et ce pour tous les problèmes, surtout désespérés -<br>
+    dégâts occasionnels selon niveau social -
+  </p>
+
+  <img src="lettre_mid.jpg" style="width:100%;"/>
+  <p class="tleft">
+    sache que j'apprécierais vraiment n'importe<br>
+    quel montant que tu pourra m'envoyer pour aider<br>
+    sache aussi que si tu peux faire quelque chose pour<br>
+    moi je te serais toujours infiniment reconnaissant
+  </p>
+  
+  <img src="lettre_bas.jpg" style="width:100%;"/>
+  <div class="band">
+    <p class="tright">
+      i express the deep apology to you<br>
+      the telephone does not have the signal<br>
+      deeply yours<br>
+      Gridge J.
+    </p>
+  </div>
+
 </body>
 </html>
