--- a/montreal/index.html
+++ b/montreal/index.html
@@ -1,91 +1,104 @@
 <html>
+<link rel="stylesheet" href="../_css/style.css" type="text/css">
 <body>
 
-  <p style="float:right;text-align:right;">
-    et chères
-    .
+  <p class="tright">
+    et chères<br>
+    .<br>
     fort bien arrivé
   </p>
-  <p style="text-align:left;">
-    chers, très chers
-    .
+  <p class="tleft">
+    chers, très chers<br>
+    .<br>
     me voici, depuis une semaine exacte et chaude
   </p>
 
-  <img src="tordu800.jpg" width="100%"/>
+  <img src="tordu800.jpg" class="w100"/>
 
-  <p style="float:right;text-align:right;">
-    pour cela
+  <p class="tright">
+    pour cela<br>
     j'ai pris des couleurs sur la peau
   </p>
-  <p style="text-align:left;">
-    je suis allé à la plage et
+  <p class="tleft">
+    je suis allé à la plage et<br>
     dans des endroits qu'on trouve pas dans les livres
   </p>
 
-  <img src="maison200.jpg" width="25%"/><img src="b200.gif" width="25%"/><img src="private200.jpg" width="25%"/><img src="plage200.jpg" width="25%"/>
+  <div class="band">
+    <img src="maison200.jpg" class="w25"/><img src="b200.gif" class="w25"/><img src="private200.jpg" class="w25"/><img src="plage200.jpg" class="w25"/>
+  </div>
 
-  <p style="float:right;text-align:right;">
+  <p class="tright">
     on a visité des parkings et des échanges autoroutiers
   </p>
-  <p style="text-align:left;">
+  <p class="tleft">
     mes nouveaux parents ont bien pris de moi soin
   </p>
 
-  <img src="toni200.jpg" width="25%"/><img src="m400.gif" width="50%"/><img src="clara200.jpg" width="25%"/>
+  <div class="band">
+    <img src="toni200.jpg" class="w25"/><img src="m400.gif" class="w50"/><img src="clara200.jpg" class="w25"/>
+  </div>
 
-  <p style="float:right;text-align:right;">
+  <p class="tright">
     les us, les coutumes, les passages-piéton et plein d'autres trucs - tout est très différent
   </p>
-  <p style="text-align:left;">
+  <p class="tleft">
     ici, bien sûr, c'est l'amérique
   </p>
 
-  <img src="sain200.jpg" width="25%"/><img src="h200.gif" width="25%"/><img src="livre200.jpg" width="25%"/><img src="flaner200.jpg" width="25%"/>
+  <div class="band">
+    <img src="sain200.jpg" class="w25"/><img src="h200.gif" class="w25"/><img src="livre200.jpg" class="w25"/><img src="flaner200.jpg" class="w25"/>
+  </div>
 
-  <p style="float:right;text-align:right;">
+  <p class="tright">
     dans la limite des stocks disponibles
   </p>
-  <p style="text-align:left;">
+  <p class="tleft">
     on y mange ce que l'on veut, très libéral. il faut donc faire beaucoup d'exercice
   </p>
 
-  <img src="chamboule800.jpg" width="100%"/>
+  <img src="chamboule800.jpg" class="w100"/>
 
-  <p style="float:right;text-align:right;">
-    soleil et temps libre aidant
+  <p class="tright">
+    soleil et temps libre aidant<br>
     mon corps grandit
   </p>
-  <p style="text-align:left;">
-    j'ai souvent joué à la marche, parfois au chamboule tout
+  <p class="tleft">
+    j'ai souvent joué à la marche, parfois au chamboule tout<br>
     on ne peut pas toujours gagner mais
   </p>
 
-  <img src="f200.gif" width="25%"/><img src="p400.gif" width="50%"/><img src="c200.gif" width="25%"/>
+  <div class="band">
+    <img src="f200.gif" class="w25"/><img src="p400.gif" class="w50"/><img src="c200.gif" class="w25"/>
+  </div>
 
-  <p style="float:right;text-align:right;">
+  <p class="tright">
     mais j'y vais au galop
   </p>
-  <p style="text-align:left;">
+  <p class="tleft">
     je ne sais encore pas bien dans quelle direction
   </p>
 
-  <img src="jeu200.jpg" width="25%"/><img src="nuit400.jpg" width="50%"/><img src="home200.jpg" width="25%"/>
+  <div class="band">
+    <img src="jeu200.jpg" class="w25"/><img src="nuit400.jpg" class="w50"/><img src="home200.jpg" class="w25"/>
+  </div>
 
-  <p style="float:right;text-align:right;">
-    oui
-    mais je reste prudent
-    .
-    à tout va
-    .
-  </p>
-  <p style="text-align:left;">
-    sans trop prévoir
-    c'est inconscient
-    .
-    bises
-    .
-  </p>
+  <div class="band">
+    <p class="tright">
+      oui<br>
+      mais je reste prudent<br>
+      .<br>
+      à tout va<br>
+      .
+    </p>
+    <p class="tleft">
+      sans trop prévoir<br>
+      c'est inconscient<br>
+      .<br>
+      bises<br>
+      .
+    </p>
+  </div>
 
 </body>
 </html>
