--- a/touche/index.html
+++ b/touche/index.html
@@ -1,15 +1,16 @@
 <html>
+<link rel="stylesheet" href="../_css/style.css" type="text/css">
 <body>
-  <img src="touche-pas.gif" style="width:100%;"/>
-  <p style="float:left;">
+  <img src="touche-pas.gif" class="w100"/>
+  <p class="tleft">
   - ma fille, il ne faut pas rentrer tard ce soir<br>
   - maman - tu veux - laisse moi vivre un peu<br>
   - il y a de la violence dans les rues.
   </p>
-  <p style="float:right;">
+  <p class="tright">
   - vous pourriez pas faire attention ?<br>
   - monsieur, je ne vous ai pas touché<br>
   - on ne se frotte pas aux autres, madame.</p>
-  <img src="ailleurs.jpg" style="width:100%;"/>
+  <img src="ailleurs.jpg" class="w100"/>
 </body>
 </html>
