--- a/crise/index.html
+++ b/crise/index.html
@@ -1,9 +1,16 @@
 <html>
+<link rel="stylesheet" href="../_css/style.css" type="text/css">
 <body>
-  <img src="tears.gif" width="50%"/><img src="ongles.gif" width="50%"/>
-  <div style="height:30px">
-  <p style="float:left;">... si ça continue, je ne pourrai même</p>
-  <p style="float:right;text-align:right">plus jouer au loto et faire ma pédicure</p>
+  <div>
+    <img src="tears.gif" class="w50"/><img src="ongles.gif" class="w50"/>
+  </div>
+  <div class="band">
+    <p class="tleft">... si ça continue, je ne pourrai même</p>
+    <p class="tright">plus jouer au loto et faire ma pédicure</p>
+  </div>
+  
+  <div class="center">
+    <img src="a.gif" width="11%"/><img src="aa.gif" width="11%"/><img src="b.gif" width="11%"/><img src="bb.gif" width="11%"/><img src="c.gif" width="11%"/><img src="cc.gif" width="11%"/><img src="d.gif" width="11%"/><img src="dd.gif" width="11%"/>
   </div>
 </body>
 </html>
