--- a/saopaulo/index.html
+++ b/saopaulo/index.html
@@ -1,12 +1,31 @@
 <html>
+<link rel="stylesheet" href="../_css/style.css" type="text/css">
 <body>
-  <p style="text-align: center;">on vu l'initiative agréable mais controversée de la ville de São Paulo (retirer tous les espaces publics publicitaires)</p>
-  <p style="text-align: center;"><img src="saopaulo_before.jpg"/></p>
-  <p style="text-align: center;">alors la ville est devenue très grise. et - sans compter la pollution - bien vite, on n'y voyait plus rien</p>
-  <p style="text-align: center;"><img src="saopaulo_clean.jpg"/></p>
-  <p style="text-align: center;">afin d'optimiser la diffusion du soleil, il a été décidé de placer des miroirs sur toutes les surfaces inoccupées de la ville</p>
-  <p style="text-align: center;"><img src="saopaulo_lighted.jpg"/></p>
-  <p style="text-align: center;">alors désormais</p>
-  <p style="text-align: center;">ses rayons y rebondissent. tout ce que l'on avait pas eu le temps de voir nous apparaît tout à coup</p>
+<div></div>
+  <div class="band">
+    <p class="tcenter">on vu l'initiative agréable mais controversée de la ville de São Paulo (retirer tous les espaces publics publicitaires)</p>
+  </div>
+  
+  <img src="saopaulo_before.jpg" class="w100"/>
+  
+  <div class="band">
+    <p class="tcenter">alors la ville est devenue très grise. et - sans compter la pollution - bien vite, on n'y voyait plus rien</p>
+  </div>
+  
+  <img src="saopaulo_clean.jpg" class="w100"/>
+
+  <div class="band">
+    <p class="tcenter">afin d'optimiser la diffusion du soleil, il a été décidé de placer des miroirs sur toutes les surfaces inoccupées de la ville</p>
+  </div>
+  
+  <img src="saopaulo_lighted.jpg" class="w100"/>
+
+  <div class="band">
+    <p class="tcenter">
+      alors désormais<br>
+      ses rayons y rebondissent. tout ce que l'on avait pas eu le temps de voir nous apparaît tout à coup
+    </p>
+  </div>
+
 </body>
 </html>
