--- a/abidjan/index.html
+++ b/abidjan/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" href="../_css/style.css" type="text/css">
+<link rel="stylesheet" href="../css/style.css" type="text/css">
 <body>
   <img src="yamoussoucro.jpg" class="w100"/>
 
