--- a/lettre/index.html
+++ b/lettre/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" href="../_css/style.css" type="text/css">
+<link rel="stylesheet" href="../css/style.css" type="text/css">
 <body>
   <p class="tleft">
     on donne 10 ans de moins, mais je recherche par manque de tendresse<br>
