--- a/touche/index.html
+++ b/touche/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" href="../_css/style.css" type="text/css">
+<link rel="stylesheet" href="../css/style.css" type="text/css">
 <body>
   <img src="touche-pas.gif" class="w100"/>
   <p class="tleft">
