--- a/crise/index.html
+++ b/crise/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" href="../_css/style.css" type="text/css">
+<link rel="stylesheet" href="../css/style.css" type="text/css">
 <body>
   <div>
     <img src="tears.gif" class="w50"/><img src="ongles.gif" class="w50"/>
