--- a/hasard/index.html
+++ b/hasard/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" href="../_css/style.css" type="text/css">
+<link rel="stylesheet" href="../css/style.css" type="text/css">
 <body>
   
   <img src="oncleamerique_lovelit.gif" class="w50"/><img src="oncleamerique_gueule.gif" class="w50"/>
